--- a/WpfApp2/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/WpfApp2/MainWindow.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="81*"/>
+            <ColumnDefinition Width="713*"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Testing 1 2 3" VerticalAlignment="Top" Grid.Column="1" Margin="247,130,0,0" Height="76" Width="135"/>
+
     </Grid>
 </Window>
