--- a/PokemonGo/WpfApp2/MainWindow.xaml
+++ b/PokemonGo/WpfApp2/MainWindow.xaml
@@ -37,7 +37,7 @@
         <Grid x:Name="GridMain" Height="460" Background="Aquamarine">
             <Image gif:ImageBehavior.AnimatedSource="3a-b__003__xy.gif" Margin="111,285,755,84" />
             <Image gif:ImageBehavior.AnimatedSource="3ani__025_f_xy.gif" Margin="729,73,197,322" />
-            <TextBlock HorizontalAlignment="Left" FontSize ="30" Margin="176,89,0,0" TextWrapping="Wrap" Text="Click here to go to navigation view" VerticalAlignment="Top"/>
+            <TextBlock HorizontalAlignment="Left" FontSize ="30" Margin="176,89,0,0" TextWrapping="Wrap" Text="Click here to go to navigation view" VerticalAlignment="Top" MouseLeftButtonDown="TextBlock_MouseLeftButtonDown"/>
             <TextBlock x:Name="exitbutton" HorizontalAlignment="Left" FontSize ="30" Margin="1053,-131,0,0" TextWrapping="Wrap" VerticalAlignment="Top" MouseLeftButtonDown="exitbutton_MouseLeftButtonDown"><Run Text="X"/><LineBreak/><Run/></TextBlock>
         </Grid>
         <TextBlock TextWrapping="Wrap" Text="TextBlock"/>
