--- a/PokemonGo/WpfApp2/manage.xaml
+++ b/PokemonGo/WpfApp2/manage.xaml
@@ -50,15 +50,19 @@
 
 
         <Grid x:Name="GridChangePokemon" Margin="0,0,20,30" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="500">
-            <Rectangle Fill="#FFFFFF" HorizontalAlignment="Left" Height="278" RadiusY="5" RadiusX="5" VerticalAlignment="Top" Width="500"/>
-            <Image gif:ImageBehavior.AnimatedSource="Images/battle/front.gif" VerticalAlignment="Top" Stretch="None" Margin="0,-44,0,0"/>
-            <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="223,43,223,0" TextWrapping="Wrap" Text="Pikichu" VerticalAlignment="Top" Height="18" FontSize="16"/>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="153*"/>
+                <ColumnDefinition Width="347*"/>
+            </Grid.ColumnDefinitions>
+            <Rectangle Fill="#FFFFFF" HorizontalAlignment="Left" Height="256" RadiusY="5" RadiusX="5" VerticalAlignment="Top" Width="500" Margin="0,22,0,0" Grid.ColumnSpan="2"/>
+            <Image gif:ImageBehavior.AnimatedSource="Images/battle/front.gif" VerticalAlignment="Top" Stretch="None" Margin="0,-44,0,0" Grid.ColumnSpan="2"/>
+            <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="69.6,43,223,0" TextWrapping="Wrap" Text="Pikichu" VerticalAlignment="Top" Height="18" FontSize="16" Grid.Column="1"/>
 
-            <Rectangle Fill="Black" HorizontalAlignment="Center" Height="9" VerticalAlignment="Top" Width="280" RadiusX="5" RadiusY="5" Opacity="0.5" Margin="110,73,110,0"/>
-            <Rectangle Fill="LightGreen" HorizontalAlignment="Center" Height="9" VerticalAlignment="Top" Width="149" RadiusX="5" RadiusY="5" Margin="110,73,241,0"/>
+            <Rectangle Fill="Black" HorizontalAlignment="Center" Height="9" VerticalAlignment="Top" Width="168" RadiusX="5" RadiusY="5" Opacity="0.5" Margin="18.6,73,160,0" Grid.Column="1"/>
+            <Rectangle Fill="LightGreen" HorizontalAlignment="Center" Height="9" VerticalAlignment="Top" Width="87" RadiusX="5" RadiusY="5" Margin="18.6,73,241,0" Grid.Column="1"/>
 
 
-            <Button BorderThickness="0" Background="{x:Null}" Width="40" Height="40" VerticalAlignment="Bottom" HorizontalAlignment="Center" Click="ButtonCloseSwitchPokemon" Margin="0,0,0,15.4">
+            <Button BorderThickness="0" Background="{x:Null}" Width="40" Height="40" VerticalAlignment="Bottom" HorizontalAlignment="Center" Click="ButtonCloseSwitchPokemon" Margin="76.6,0,230,15.4" Grid.Column="1">
                 <StackPanel>
                     <Image Source="button_tick.png" Width="30" Height="30" />
                 </StackPanel>
@@ -66,7 +70,26 @@
         </Grid>
         <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="307,257,396.6,0" TextWrapping="Wrap" Text="STARDUST" VerticalAlignment="Top" Height="18" FontSize="16" Width="90"/>
         <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="307,282,396.6,0" TextWrapping="Wrap" Text="CANDY" VerticalAlignment="Top" Height="18" FontSize="16" Width="90"/>
-        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="307,305,396.6,0" TextWrapping="Wrap" Text="SKILL 1" VerticalAlignment="Top" Height="18" FontSize="16" Width="90"/>
+        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="550,257,153.6,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="90" Text="Ember"/>
+        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="706,257,45.6,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="42" Text="10"/>
+        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="550,282,125.6,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="118" Text="Flamethrower"/>
+        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="706,282,45.6,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="42" Text="50"/>
+        <Image Margin="307,153,372.6,228" Source="Images/manage/powerup.png"/>
+        <Image Margin="307,197,372.6,184" Source="Images/manage/evolve.png"/>
+        <Image Margin="634,153,45.6,228" Source="Images/manage/rename.png"/>
+        <Image Margin="634,197,45.6,184" Source="Images/manage/sell.png"/>
+        <Image Margin="419,16,167.6,297" HorizontalAlignment="Center" Source="Images/manage/arch.png" Width="207"/>
+        <Ellipse Width="10" Height="10" Fill="White" Margin="0,227,368.6,183" RenderTransformOrigin="11.191,0.211" HorizontalAlignment="Right">
+            <Ellipse.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform Y="-110"/>
+                </TransformGroup>
+            </Ellipse.RenderTransform>
+        </Ellipse>
+        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="456,257,295.6,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="42" Text="5000"/>
 
 
     </Grid>
