--- a/PokemonGo/WpfApp2/manage.xaml
+++ b/PokemonGo/WpfApp2/manage.xaml
@@ -1,9 +1,8 @@
-﻿<Window x:Class="PokemonGo.manage"
+﻿<Window x:Class="PokemonGo.Manage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:gif="http://wpfanimatedgif.codeplex.com"
+        xmlns:pokemongo="clr-namespace:PokemonGo" xmlns:controls="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
         Title="Manage Pokemon/Collection" Height="450" Width="800">
     <Grid>
         <Image Margin="188,-187,187.6,-185" Source="PgXHOnv.png" Stretch="Fill" RenderTransformOrigin="0.5,0.5">
@@ -18,36 +17,13 @@
             <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Width="231" Height="410">
                 <TextBlock TextWrapping="Wrap" Margin="0,0,0,20">Scrolling is enabled when it is necessary. 
       Resize the window, making it larger and smaller.</TextBlock>
-                <Button BorderThickness="0" Background="{x:Null}" Margin="0,0,172,116.4" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="ButtonConfirmSwitchPokemon">
-                    <StackPanel>
-                        <DockPanel Margin="5,0,0,5">
-                            <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="CP" Width="16" FontSize="10" FontWeight="Light"/>
-                            <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="1485" FontSize="14" FontWeight="Medium"/>
-                        </DockPanel>
-                        <Canvas>
-                            <Image Width="140" Height="140" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                                <Image.OpacityMask>
-                                    <ImageBrush ImageSource="3a-b__003__xy.gif" Stretch="None"/>
-                                </Image.OpacityMask>
-                            </Image>
-                        </Canvas>
-                        <Rectangle Stroke="#FF16E7DA" HorizontalAlignment="Center" Height="60" RadiusY="5" RadiusX="5" Width="60">
-                            <Rectangle.Fill>
-                                <ImageBrush ImageSource="battle_poke_1.gif" Stretch="None">
-                                    <ImageBrush.RelativeTransform>
-                                        <TransformGroup>
-                                            <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleX="0.8" ScaleY="0.8"/>
-                                        </TransformGroup>
-                                    </ImageBrush.RelativeTransform>
-                                </ImageBrush>
-                            </Rectangle.Fill>
-                        </Rectangle>
-                        <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="Vaporeon" FontSize="10" FontWeight="Light" HorizontalAlignment="Center" Margin="0,5,0,0"/>
-                    </StackPanel>
-                </Button>
+                <controls:UniformGrid Columns="3">
+                    <Button BorderThickness="0" Background="{x:Null}" VerticalAlignment="Bottom" HorizontalAlignment="Left">
+                        <pokemongo:PokemonSingleViewTiny PokemonName="Pokemon Name" PokemonCP="1234" Loaded="PokemonSingleViewTiny_Loaded"/>
+                    </Button>
+                </controls:UniformGrid>
             </StackPanel>
         </ScrollViewer>
-
 
         <Grid x:Name="GridChangePokemon" Margin="0,0,20,30" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="500">
             <Grid.ColumnDefinitions>
@@ -61,8 +37,7 @@
             <Rectangle Fill="Black" HorizontalAlignment="Center" Height="9" VerticalAlignment="Top" Width="168" RadiusX="5" RadiusY="5" Opacity="0.5" Margin="18.6,73,160,0" Grid.Column="1"/>
             <Rectangle Fill="LightGreen" HorizontalAlignment="Center" Height="9" VerticalAlignment="Top" Width="87" RadiusX="5" RadiusY="5" Margin="18.6,73,241,0" Grid.Column="1"/>
 
-
-            <Button BorderThickness="0" Background="{x:Null}" Width="40" Height="40" VerticalAlignment="Bottom" HorizontalAlignment="Center" Click="ButtonCloseSwitchPokemon" Margin="76.6,0,230,15.4" Grid.Column="1">
+            <Button BorderThickness="0" Background="{x:Null}" Width="40" Height="40" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="76.6,0,230,15.4" Grid.Column="1">
                 <StackPanel>
                     <Image Source="button_tick.png" Width="30" Height="30" />
                 </StackPanel>
