--- a/PokemonGo/WpfApp2/Battle.xaml
+++ b/PokemonGo/WpfApp2/Battle.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PokemonGo.Battle"
+﻿<Page x:Class="PokemonGo.Battle"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -96,4 +96,4 @@
         </Grid>
 
     </Grid>
-</Window>
+</Page>
