--- a/PokemonGo/WpfApp2/Capture.xaml
+++ b/PokemonGo/WpfApp2/Capture.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PokemonGo.Capture"
+﻿<Page x:Class="PokemonGo.Capture"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:gif="http://wpfanimatedgif.codeplex.com"
         xmlns:local="clr-namespace:PokemonGo"
         mc:Ignorable="d"
-        Title="Capture" Height="450" Width="800" FocusManager.FocusedElement="{Binding ElementName=MyCanvas}" Closed="Window_Closed">
+        Title="Capture" Height="450" Width="800" FocusManager.FocusedElement="{Binding ElementName=MyCanvas}">
     <Canvas Name="MyCanvas" KeyDown="Canvas_KeyDown" Focusable="True" >
         <Canvas.Background>
             <ImageBrush ImageSource="capture_background.png" Stretch="UniformToFill"/>
@@ -47,4 +47,4 @@
         <TextBlock x:Name="escapetext"  Visibility="Hidden" FontSize="26" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="742" Canvas.Left="46" Canvas.Top="337" Text="Not enough Pokeballs! Collect some and hunt again."/>
         <Image x:Name="Moveball" Visibility="Hidden" Source="pokeball.png"  HorizontalAlignment="Left" Height="49" VerticalAlignment="Top" Width="38" RenderTransformOrigin="-0.009,0.394" Canvas.Left="354" Canvas.Top="6"/>
     </Canvas>
-</Window>
+</Page>
