--- a/PokemonGo/WpfApp2/Navigation.xaml
+++ b/PokemonGo/WpfApp2/Navigation.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="PokemonGo.Navigation"
+﻿<Page x:Class="PokemonGo.Navigation"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="Navigation" Height="450" Width="800" Closed="Window_Closed" FocusManager.FocusedElement="{Binding ElementName=MyCanvas}">
-    <Canvas Name="MyCanvas" KeyDown="Canvas_KeyDown" Focusable="True" >
+        Title="Navigation" Height="450" Width="800" FocusManager.FocusedElement="{Binding ElementName=NavigationCanvas}">
+    <Canvas Name="NavigationCanvas" KeyDown="Nav_KeyDown" Focusable="True">
         <Canvas.Background>
             <ImageBrush ImageSource="fake_map.png" Stretch="UniformToFill"/>
         </Canvas.Background>
@@ -16,4 +16,4 @@
         <TextBlock x:Name="debug1" TextWrapping="Wrap" Text="TextBlock" Canvas.Left="317" Canvas.Top="168" RenderTransformOrigin="-2,-5.562"/>
         <TextBlock x:Name="debug2" TextWrapping="Wrap" Text="TextBlock" Canvas.Left="316" Canvas.Top="190"/>
     </Canvas>
-</Window>
+</Page>
