--- a/PokemonGo/WpfApp2/Battle.xaml
+++ b/PokemonGo/WpfApp2/Battle.xaml
@@ -31,14 +31,14 @@
         <!--Image button to change battle pokemon-->
         <Button BorderThickness="0" Background="{x:Null}" Width="55" Height="55" Margin="0,0,90,20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="ButtonSwitchPokemon">
             <StackPanel>
-                <Image Source="button_change.png" Width="48" Height="48" />
+                <Image Source="Images/button/change.png" Width="48" Height="48" />
             </StackPanel>
         </Button>
 
         <!--Image button to run away-->
         <Button BorderThickness="0" Background="{x:Null}" Width="55" Height="55" Margin="0,0,30,20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="ButtonRunAway">
             <StackPanel>
-                <Image Source="button_run.png" Width="48" Height="48" />
+                <Image Source="Images/button/run.png" Width="48" Height="48" />
             </StackPanel>
         </Button>
 
@@ -90,7 +90,7 @@
 
             <Button BorderThickness="0" Background="{x:Null}" Width="40" Height="40" VerticalAlignment="Bottom" HorizontalAlignment="Center" Click="ButtonCloseSwitchPokemon" Margin="106,0,106,15">
                 <StackPanel>
-                    <Image Source="button_close.png" Width="30" Height="30" />
+                    <Image Source="Images/button/close.png" Width="30" Height="30" />
                 </StackPanel>
             </Button>
         </Grid>
